# Fazwaz

./: .cursorignore  .gitignore  Cargo.toml  LISTINGS.md
config/: default.toml  development.example.toml
src/: README.md  lib.rs  main.rs
src/backend/: README.md  mod.rs
src/backend/api/: Agent_listing_listener.md  README.md  agent_listing_listener.rs  health.rs  image.rs  key.rs  listing.rs  metrics.rs  mod.rs  router.rs  search.rs
src/backend/api/voice/: interview.rs
src/backend/assets/: README.md  analyse_image.md  key_email.html
src/backend/common/: README.md  config.rs  mod.rs
src/backend/common/error/: README.md  error.rs  mod.rs  storage_error.rs
src/backend/common/types/: README.md  auth_types.rs  batch_types.rs  health_types.rs  id_types.rs  image_context.rs  image_types.rs  listing_types.rs  metadata.rs  mod.rs  ownership_types.rs  status_types.rs  user_id_types.rs  website_sections.rs
src/backend/common/types/countries/: cambodia.rs  currency.rs  geograficalinfo.rs  mod.rs  ownershiptype.rs  thailand.rs  uae.rs
src/backend/common/types/listing_types/: enums.rs  mod.rs  models.rs  nodes.rs  requests.rs
src/backend/common/utils/: README.md  image_utils.rs  mod.rs
src/backend/common/validation/: README.md  id_validation.rs  image_validation.rs  mod.rs  request_validation.rs
src/backend/email/: mod.rs  service.rs
src/backend/email/templates/: key_email.html  key_email_text.txt
src/backend/error/: README.md
src/backend/f_ai_core/: README.md  audit.rs  batch.rs  cache.rs  events copy.rs  events.rs  health.rs  key_cleanup.rs  metrics.rs  mod.rs  resource.rs  resource_manager.rs  resource_types.rs  state.rs  temp_cleanup.rs
src/backend/f_ai_database/: README.md  batch_model.rs  config.rs  database.rs  database_manager.rs  error.rs  image_model.rs  image_service.rs  listing_model.rs  listing_service.rs  location_schema.rs  mod.rs  schema.rs  schema.surql  storage.rs  user_database.rs  user_id.rs
src/backend/image_processor/: README.md  README_color.md  README_histogram.md  README_image_utils.md  README_processor.md  analysis_pipeline.rs  batch_report.rs  color.rs  histogram.rs  image_utils.rs  job_scheduler.rs  mod.rs  processor.rs  quality_report.rs  upload_processor.rs
src/backend/key_logic_auth/: README.md  auth.rs  email_service.rs  key_service.rs  mod.rs  rate_limit.rs
src/backend/llm_caller/: README.md  analysis_client.rs  analysis_service.rs  batch.rs  batch_analysis_service.rs  batch_processor.rs  embedding_service.rs  image_embedding.rs  local_embedding.rs  mod.rs  openai_client.rs  prompt_service.rs  types.rs
src/backend/llm_caller/prompts/: image_analysis.rs  mod.rs  response.json  role.json  role.md  types.rs
src/backend/monitoring/: README.md  audit.rs  events.rs  metrics.rs  mod.rs
src/backend/trans_storage/: README.md  b2_storage.rs  b2_storage_ext.rs  bucket_config.rs  file_manager.rs  mod.rs  storage_error.rs
src/backend/voice_agent/: interview_service.rs
src/backend/websocket/: websocket_handler.rs
tests/: integration_test.rs
