[package]
name = "f_ai_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
async-openai = "0.17"
once_cell = "1.18"
include_dir = "0.7"
chrono = { version = "0.4", features = ["serde"] }
uuid7 = { version = "1.1.0", features = ["serde", "std"] }
tower-http = { version = "0.5", features = ["cors"] }
surrealdb = { version = "1.0.0" }
image = { version = "0.24", features = ["webp"] }
webp = "0.2"
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls"] }
resvg = "0.35.0"
mockall = "0.11.3"
kamadak-exif = "0.5"
mozjpeg = "0.10.12"
rayon = "1.7"
bytes = "1.4"
memmap2 = "0.5"
backoff = { version = "0.4", features = ["tokio"] }
cached = "0.44"
base64 = "0.21"
tokio-stream = "0.1"
metrics-exporter-prometheus = "0.12"
handlebars = "4.3"
aws-sdk-s3 = "1.66.0"
surf = { version = "2.3", features = ["h1-client"] }
rand = "0.8"
dotenv = "0.15"
config = "0.13"

[dev-dependencies]
tracing-test = "0.2"
test-log = "0.2"
mockall = "0.11.3" 